--- a/public/app/main/main.jade
+++ b/public/app/main/main.jade
@@ -1,7 +1,7 @@
 .container
   .jumbotron
-    h1 MultiVision
-    p Welcome to MultiVision! The most comprehensive and complete collection of extreme tech training videos on the web.
+    h1 Inventory Management System
+    p Inventory Management System designed and built by David Cole
   .row
     .col-md-6
       div(ng-include="'/partials/main/featured-courses'")
