--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,11 +1,14 @@
 body {
   padding-top: 70px;
 }
-.navbar-header a.navbar-brand {
-  margin-bottom: 20px;
+.navbar {
+  height: 70px;
 }
-.navbar-header a.navbar-brand h6 {
-  color: #ccc;
+.navbar-nav a {
+  margin-top: 8px;
+}
+.navbar-form a {
+  margin-top: 0px;
 }
 footer {
   padding-left: 15px;
@@ -35,5 +38,5 @@ footer p {
   margin-left: 10px;
 }
 .toast-top-right {
-  top: 71px;
+  top: 70px;
 }
