--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -1,11 +1,11 @@
 body
   padding-top 70px
-
-.navbar-header a.navbar-brand
-  margin-bottom 20px
-  h6
-    color #ccc
-
+.navbar
+  height 70px
+.navbar-nav a
+  margin-top 8px
+.navbar-form a
+  margin-top 0px
 footer
   padding-left 15px
   padding-right 15px
@@ -19,6 +19,7 @@ footer
   button
     margin-left 10px
     margin-top 8px
+
 .alertify .dialog nav button:not(.btn):not(.pure-button):not(.md-button):not(.mdl-button).cancel
     background-color red
 .alertify .dialog nav button:not(.btn):not(.pure-button):not(.md-button):not(.mdl-button).ok
@@ -31,4 +32,4 @@ footer
   margin-left 10px
 
 .toast-top-right
-  top 71px
+  top 70px
