--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -10,6 +10,22 @@ block main-content
             a(href="/") Home
           li
             a(href="/courses") Courses
+          li.dropdown
+            a.dropdown-toggle(href="", data-toggle="dropdown") Screens
+              b.caret
+            ul.dropdown-menu
+              li
+                a(href='#') Inventory
+              li
+                a(href='#') Outbound
+              li
+                a(href='#') Inbound
+              li
+                a(href='#') Locations
+              li
+                a(href='#') Products
+              li
+                a(href='#') Search
         div(ng-include="'/partials/account/navbar-login'")
             
   section.content
