added jade files for all screen links

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -15,17 +15,17 @@ block main-content
               b.caret
             ul.dropdown-menu
               li
-                a(href='#') Inventory
+                a(href="/screens/inventory") Inventory
               li
-                a(href='#') Outbound
+                a(href="/screens/outbound") Outbound
               li
-                a(href='#') Inbound
+                a(href="/screens/inbound") Inbound
               li
-                a(href='#') Locations
+                a(href="/screens/locations") Locations
               li
-                a(href='#') Products
+                a(href="/screens/products") Products
               li
-                a(href='#') Search
+                a(href="/screens/search") Search
         div(ng-include="'/partials/account/navbar-login'")
             
   section.content
