all screen files and controllers are functional

--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -21,3 +21,9 @@ script(type="text/javascript", src="/app/common/mvNotifier.js")
 script(type="text/javascript", src="/app/admin/mvUserListCtrl.js")
 script(type="text/javascript", src="/app/admin/mvUserDetailCtrl.js")
 script(type="text/javascript", src="/app/admin/mvCachedUsers.js")
+script(type="text/javascript", src="/app/screens/mvInboundScreenCtrl.js")
+script(type="text/javascript", src="/app/screens/mvInventoryScreenCtrl.js")
+script(type="text/javascript", src="/app/screens/mvLocationsScreenCtrl.js")
+script(type="text/javascript", src="/app/screens/mvOutboundScreenCtrl.js")
+script(type="text/javascript", src="/app/screens/mvProductsScreenCtrl.js")
+script(type="text/javascript", src="/app/screens/mvSearchScreenCtrl.js")
