--- a/public/app/main/main.jade
+++ b/public/app/main/main.jade
@@ -1,7 +1,7 @@
 .container
   .jumbotron
     h1 Inventory Management System
-    p Inventory Management System designed and built by David Cole (CONVERT)
+    p Inventory Management System designed and built by David Cole
   .row
     .col-md-6
     .col-md-6
