--- a/public/app/admin/user-list.jade
+++ b/public/app/admin/user-list.jade
@@ -1,6 +1,12 @@
 .container
+  .pull-right
+    form.form-inline
+      .form-group
+        input.form-control(ng-model="searchText", placeholder="Filter")
+      .form-group
+        select.form-control(ng-model="sortOrder", ng-options="item.value as item.text for item in sortOptions")
   table.table
-    tr(ng-repeat="user in users")
+    tr(ng-repeat="user in users | filter:searchText | orderBy:sortOrder")
       td(ng-show="user.isAdmin()") {{ user.firstName + ' ' + user.lastName }}
       td(ng-show="!user.isAdmin()")
         a(href="/admin/user/{{user._id}}") {{ user.firstName + ' ' + user.lastName }}
