--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -26,4 +26,5 @@ script(type="text/javascript", src="/app/screens/inventory/mvInventoryScreenCtrl
 script(type="text/javascript", src="/app/screens/locations/mvLocationsScreenCtrl.js")
 script(type="text/javascript", src="/app/screens/outbound/mvOutboundScreenCtrl.js")
 script(type="text/javascript", src="/app/screens/products/mvProductsScreenCtrl.js")
+script(type="text/javascript", src="/app/screens/products/mvProduct.js")
 script(type="text/javascript", src="/app/screens/search/mvSearchScreenCtrl.js")
