--- a/public/css/site.css
+++ b/public/css/site.css
@@ -34,8 +34,12 @@ footer p {
 .toast-top-right {
   top: 70px;
 }
-.product button.btn {
-  width: 130px;
+.product button {
+  width: 120px;
+}
+.product button a {
+  color: #fff;
+  text-decoration: none;
 }
 .vertical-center {
   vertical-align: middle;
