--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -28,8 +28,12 @@ footer
 .toast-top-right
   top 70px
 
-.product button.btn
-  width 130px
+.product
+  button
+    width 120px
+    a
+      color white
+      text-decoration none
 
 .vertical-center
   vertical-align middle
