admin can update products

--- a/public/app/admin/product/product-details.jade
+++ b/public/app/admin/product/product-details.jade
@@ -34,6 +34,6 @@
         .form-group
           .col-md-10.col-md-offset-2
             .pull-right
-              button.btn.btn-primary(ng-click="update()", ng-disabled="productForm.$invalid") Confirm Changes
+              button.btn.btn-primary(ng-click="update(product)", ng-disabled="productForm.$invalid") Confirm Changes
               | &nbsp;
               a.btn.btn-default(href="/screens/products") Cancel
