--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -22,6 +22,7 @@ script(type="text/javascript", src="/app/admin/user/mvUserListCtrl.js")
 script(type="text/javascript", src="/app/admin/user/mvUserDetailCtrl.js")
 script(type="text/javascript", src="/app/admin/user/mvCachedUsers.js")
 script(type="text/javascript", src="/app/admin/product/mvProductDetailCtrl.js")
+script(type="text/javascript", src="/app/admin/product/mvProductAdmin.js")
 script(type="text/javascript", src="/app/screens/inbound/mvInboundScreenCtrl.js")
 script(type="text/javascript", src="/app/screens/inventory/mvInventoryScreenCtrl.js")
 script(type="text/javascript", src="/app/screens/locations/mvLocationsScreenCtrl.js")
