--- a/public/app/screens/products/products-list.jade
+++ b/public/app/screens/products/products-list.jade
@@ -1,11 +1,11 @@
 .container
+  h1.visible-lg-inline.text-center Products
   .pull-right
     form.form-inline
       .form-group
         input.form-control(ng-model="searchText", placeholder="Filter")
       .form-group
         select.form-control(ng-model="sortOrder", ng-options="item.value as item.text for item in sortOptions")
-  h1.text-center Products
   table.table.table-hover.table-striped.table-condensed
     thead
       tr
@@ -24,6 +24,6 @@
         td {{ product.upc }}
         td {{ product.product_id }}
         td {{ product.quantity }}
-        td {{ product.price }}
+        td {{ product.price | currency:"$":2}}
         td {{ product.manufacturer }}
 
