updated todo, added h1 to user page

--- a/public/app/screens/products/products-list.jade
+++ b/public/app/screens/products/products-list.jade
@@ -1,5 +1,5 @@
 .container
-  h1.visible-lg-inline.text-center Products
+  h1.visible-lg-inline Products
   .pull-right
     form.form-inline
       .form-group
