--- a/public/app/admin/user/user.jade
+++ b/public/app/admin/user/user.jade
@@ -1,5 +1,6 @@
 .container
+  a.btn.btn-tabs.btn-sm(href="/admin/users") << Back to Users
   h1.form-inline {{ user.firstName + ' ' + user.lastName }}
-  button.breadcrumb(ng-click="deleteUser(user._id, user.firstName, user.lastName)") Delete User
+  button.btn.btn-default(ng-click="deleteUser(user._id, user.firstName, user.lastName)") Delete User
   hr
   h4(ng-repeat="(key, val) in user") {{ key }}: {{ val }}
