--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -28,12 +28,16 @@ footer
 .toast-top-right
   top 70px
 
+a.link-alias
+  color black
+  text-decoration none
+
 .product
   button
     width 120px
-    a
-      color white
-      text-decoration none
+.btn-tabs
+  button
+    margin-right 5px
 
 .vertical-center
   vertical-align middle
