--- a/public/app/admin/product/product-details.jade
+++ b/public/app/admin/product/product-details.jade
@@ -1,10 +1,3 @@
 .container
-  a.btn.btn-tabs.btn-sm(href="/screens/products") << Back to Products
-  h1.form-inline {{ product.name }}
-  .btn-tabs
-    button.btn.btn-default(ng-click="") Order Product
-    button.btn.btn-default
-      a.link-alias(href="/admin/product/edit/{{product._id}}") Edit Product
-    button.btn.btn-default(ng-click="") Delete Product
-  hr
+  item-details
   h4(ng-repeat="(key, val) in product") {{ key }}: {{ val }}
