--- a/public/app/screens/products/products-list.jade
+++ b/public/app/screens/products/products-list.jade
@@ -1,29 +1,22 @@
-.container
-  h1.form-inline Products
-  .pull-right
-    form.form-inline
-      .form-group
-        input.form-control(ng-model="searchText", placeholder="Filter")
-      .form-group
-        select.form-control(ng-model="sortOrder", ng-options="item.value as item.text for item in sortOptions")
-  table.table.table-hover.table-striped.table-condensed
-    thead
-      tr
-        th Name
-        th Description
-        th UPC
-        th Product ID
-        th Quantity
-        th Price
-        th Manufacturer
-    tbody
-      tr(ng-repeat="product in products | filter:searchText | orderBy:sortOrder")
-        td
-          a(href="/admin/product/{{product._id}}", ng-show="identity.currentUser.isAdmin()") {{ product.name }}
-        td {{ product.description }}
-        td {{ product.upc }}
-        td {{ product.product_id }}
-        td {{ product.quantity }}
-        td {{ product.price | currency:"$":2}}
-        td {{ product.manufacturer }}
+list-items
+table.table.table-hover.table-striped.table-condensed
+  thead
+    tr
+      th Name
+      th Description
+      th UPC
+      th Product ID
+      th Quantity
+      th Price
+      th Manufacturer
+  tbody
+    tr(ng-repeat="product in products | filter:searchText | orderBy:sortOrder")
+      td
+        a(href="/admin/product/{{product._id}}", ng-show="identity.currentUser.isAdmin()") {{ product.name }}
+      td {{ product.description }}
+      td {{ product.upc }}
+      td {{ product.product_id }}
+      td {{ product.quantity }}
+      td {{ product.price | currency:"$":2}}
+      td {{ product.manufacturer }}
 
