--- a/public/app/admin/product/product-details.jade
+++ b/public/app/admin/product/product-details.jade
@@ -1,3 +1,3 @@
 .container
   item-details
-  h4(ng-repeat="(key, val) in product") {{ key }}: {{ val }}
+  h4(ng-repeat="(key, val) in currentItem") {{ key }}: {{ val }}
