--- a/public/app/common/templates/item-details.jade
+++ b/public/app/common/templates/item-details.jade
@@ -1,6 +1,6 @@
-a.btn.btn-tabs.btn-sm(href="{{ backUrl }}") << Back to Products
-h1.form-inline {{ product.name }}
+a.btn.btn-tabs.btn-sm(href="{{ backUrl }}") << Back to {{ backUrlText }}
+h1.form-inline {{ heading }}
 .btn-tabs
-  button.btn.btn-default(ng-repeat="itemButton in buttons")
+  button.btn.btn-default(ng-repeat="itemButton in buttons", ng-click="itemButton.func(currentItem)")
     a.link-alias(href="{{ itemButton.url }}") {{ itemButton.text }}
 hr
