--- a/public/app/admin/user/user-list.jade
+++ b/public/app/admin/user/user-list.jade
@@ -1,14 +1,15 @@
-list-items
-table.table.table-hover.table-striped.table-condensed
-  thead
-    tr
-      th Full Name
-      th Username
-      th Roles
-  tbody
-    tr(ng-repeat="user in users | filter:searchText | orderBy:sortOrder")
-      td(ng-show="user.isAdmin()") {{ user.firstName + ' ' + user.lastName }}
-      td(ng-show="!user.isAdmin()")
-        a(href="/admin/user/{{user._id}}") {{ user.firstName + ' ' + user.lastName }}
-      td {{ user.username }}
-      td {{ user.roles }}
+.container
+  list-items
+  table.table.table-hover.table-striped.table-condensed
+    thead
+      tr
+        th Full Name
+        th Username
+        th Roles
+    tbody
+      tr(ng-repeat="user in users | filter:searchText | orderBy:sortOrder")
+        td(ng-show="user.isAdmin()") {{ user.firstName + ' ' + user.lastName }}
+        td(ng-show="!user.isAdmin()")
+          a(href="/admin/user/{{user._id}}") {{ user.firstName + ' ' + user.lastName }}
+        td {{ user.username }}
+        td {{ user.roles }}
