--- a/public/app/screens/products/products-list.jade
+++ b/public/app/screens/products/products-list.jade
@@ -1,22 +1,23 @@
-list-items
-table.table.table-hover.table-striped.table-condensed
-  thead
-    tr
-      th Name
-      th Description
-      th UPC
-      th Product ID
-      th Quantity
-      th Price
-      th Manufacturer
-  tbody
-    tr(ng-repeat="product in products | filter:searchText | orderBy:sortOrder")
-      td
-        a(href="/admin/product/{{product._id}}", ng-show="identity.currentUser.isAdmin()") {{ product.name }}
-      td {{ product.description }}
-      td {{ product.upc }}
-      td {{ product.product_id }}
-      td {{ product.quantity }}
-      td {{ product.price | currency:"$":2}}
-      td {{ product.manufacturer }}
+.container
+  list-items
+  table.table.table-hover.table-striped.table-condensed
+    thead
+      tr
+        th Name
+        th Description
+        th UPC
+        th Product ID
+        th Quantity
+        th Price
+        th Manufacturer
+    tbody
+      tr(ng-repeat="product in products | filter:searchText | orderBy:sortOrder")
+        td
+          a(href="/admin/product/{{product._id}}", ng-show="identity.currentUser.isAdmin()") {{ product.name }}
+        td {{ product.description }}
+        td {{ product.upc }}
+        td {{ product.product_id }}
+        td {{ product.quantity }}
+        td {{ product.price | currency:"$":2}}
+        td {{ product.manufacturer }}
 
