--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -28,10 +28,13 @@ footer
 .toast-top-right
   top 70px
 
-a.link-alias
-  color black
-  text-decoration none
 
+a.link-alias
+  text-decoration none
+  color #000
+a.link-alias-white
+  text-decoration none
+  color #fff
 .product
   button
     width 120px
@@ -47,3 +50,98 @@ a.link-alias
 
 .margin-left-med
   margin-left 10px
+
+.content-container
+  margin 20px
+  padding-top 10px
+  //background-color #c3c3c3
+
+$product-main-color = #000000
+$product-text-color = white
+
+$inventory-main-color = #464646
+$inventory-text-color = white
+
+$inbound-main-color = #5a5a5a
+$inbound-text-color = white
+
+$outbound-main-color = #6b6b6b
+$outbound-text-color = white
+
+$locations-main-color = #7c7c7c
+$locations-text-color = white
+
+$search-main-color = #969696
+$search-text-color = white
+
+.panel-primary
+  .product
+    background-color $product-main-color
+    border-color $product-main-color
+    a
+      color $product-text-color
+
+  .inbound
+    background-color $inbound-main-color
+    border-color $inbound-main-color
+    a
+      color $inbound-text-color
+
+  .inventory
+    background-color $inventory-main-color
+    border-color $inventory-main-color
+    a
+      color $inventory-text-color
+
+  .locations
+    background-color $locations-main-color
+    border-color $locations-main-color
+    a
+      color $locations-text-color
+
+  .outbound
+    background-color $outbound-main-color
+    border-color $outbound-main-color
+    a
+      color $outbound-text-color
+
+  .search
+    background-color $search-main-color
+    border-color $search-main-color
+    a
+      color $search-text-color
+
+.product
+  border-color $product-main-color
+.inbound
+  border-color $inbound-main-color
+.outbound
+  border-color $outbound-main-color
+.inventory
+  border-color $inventory-main-color
+.locations
+  border-color $locations-main-color
+.search
+  border-color $search-main-color
+
+h1.product
+  background-color $product-main-color
+  color $product-text-color
+h1.inbound
+  background-color $inbound-main-color
+  color $inbound-text-color
+h1.outbound
+  background-color $outbound-main-color
+  color $outbound-text-color
+h1.inventory
+  background-color $inventory-main-color
+  color $inventory-text-color
+h1.locations
+  background-color $locations-main-color
+  color $locations-text-color
+h1.search
+  background-color $search-main-color
+  color $search-text-color
+
+.text-black
+  color #000
