--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -18,7 +18,7 @@ block main-content
 
         div(ng-include="'/partials/account/navbar-login'")
             
-  section.content
+  section.content.content-container
     div(ng-view)
 
   footer.container.text-center
