--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -6,7 +6,13 @@ script(type="text/javascript", src="/vendor/angular-resource/angular-resource.js
 script(type="text/javascript", src="/vendor/angular-route/angular-route.js")
 script(type="text/javascript", src="/vendor/alertify.js/dist/js/ngAlertify.js")
 script(type="text/javascript", src="/app/app.js")
-script(type="text/javascript", src="/app/main/mvMainCtrl.js")
+script(type="text/javascript", src="/app/main/controllers/mvMainCtrl.js")
+script(type="text/javascript", src="/app/main/controllers/mvMainInboundCtrl.js")
+script(type="text/javascript", src="/app/main/controllers/mvMainInventoryCtrl.js")
+script(type="text/javascript", src="/app/main/controllers/mvMainLocationsCtrl.js")
+script(type="text/javascript", src="/app/main/controllers/mvMainOutboundCtrl.js")
+script(type="text/javascript", src="/app/main/controllers/mvMainProductsCtrl.js")
+script(type="text/javascript", src="/app/main/controllers/mvMainSearchCtrl.js")
 script(type="text/javascript", src="/app/account/mvNavBarLoginCtrl.js")
 script(type="text/javascript", src="/app/account/mvIdentity.js")
 script(type="text/javascript", src="/app/account/mvAuth.js")
