--- a/public/app/common/templates/list-items.jade
+++ b/public/app/common/templates/list-items.jade
@@ -1,4 +1,4 @@
-h1.form-inline.text-center(ng-class="{ product: type == 'product', inbound: type == 'inbound', outbound: type == 'outbound', inventory: type == 'inventory', locations: type == 'location', search: type == 'search'}") {{ title }}
+h1.form-inline.text-center(ng-class="css") {{ title }}
 .pull-right
   form.form-inline
     .form-group
