--- a/public/app/screens/products/products-list.jade
+++ b/public/app/screens/products/products-list.jade
@@ -1,5 +1,7 @@
 .container
   list-items
+  button.btn.btn-default(ng-show="identity.currentUser.isAdmin()")
+    a.link-alias(href="/admin/product/add") Add Product
   table.table.table-hover.table-striped.table-condensed
     thead
       tr
@@ -20,4 +22,3 @@
         td {{ product.quantity }}
         td {{ product.price | currency:"$":2}}
         td {{ product.manufacturer }}
-
