--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -124,24 +124,28 @@ $search-text-color = white
 .search
   border-color $search-main-color
 
-h1.product
+.product-header
   background-color $product-main-color
   color $product-text-color
-h1.inbound
+.inbound-header
   background-color $inbound-main-color
   color $inbound-text-color
-h1.outbound
+.outbound-header
   background-color $outbound-main-color
   color $outbound-text-color
-h1.inventory
+.inventory-header
   background-color $inventory-main-color
   color $inventory-text-color
-h1.locations
+.locations-header
   background-color $locations-main-color
   color $locations-text-color
-h1.search
+.search-header
   background-color $search-main-color
   color $search-text-color
 
 .text-black
   color #000
+.text-white
+  color #fff
+.text-red
+  color #880000
