--- a/public/css/site.css
+++ b/public/css/site.css
@@ -121,30 +121,36 @@ a.link-alias-white {
 .search {
   border-color: #969696;
 }
-h1.product {
+.product-header {
   background-color: #000;
   color: #fff;
 }
-h1.inbound {
+.inbound-header {
   background-color: #5a5a5a;
   color: #fff;
 }
-h1.outbound {
+.outbound-header {
   background-color: #6b6b6b;
   color: #fff;
 }
-h1.inventory {
+.inventory-header {
   background-color: #464646;
   color: #fff;
 }
-h1.locations {
+.locations-header {
   background-color: #7c7c7c;
   color: #fff;
 }
-h1.search {
+.search-header {
   background-color: #969696;
   color: #fff;
 }
 .text-black {
   color: #000;
+}
+.text-white {
+  color: #fff;
+}
+.text-red {
+  color: #800;
 }
