--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -31,6 +31,7 @@ script(type="text/javascript", src="/app/admin/user/mvUserDetailCtrl.js")
 script(type="text/javascript", src="/app/admin/user/mvCachedUsers.js")
 script(type="text/javascript", src="/app/admin/product/mvProductDetailCtrl.js")
 script(type="text/javascript", src="/app/admin/product/mvProductAdmin.js")
+script(type="text/javascript", src="/app/admin/product/mvProductAddCtrl.js")
 script(type="text/javascript", src="/app/admin/product/mvProductsListCtrl.js")
 script(type="text/javascript", src="/app/screens/inbound/mvInboundScreenCtrl.js")
 script(type="text/javascript", src="/app/screens/inventory/mvInventoryScreenCtrl.js")
