--- a/public/app/screens/screens.jade
+++ b/public/app/screens/screens.jade
@@ -2,14 +2,10 @@ a.dropdown-toggle(href="", data-toggle ="dropdown", ng-show="identity.isAuthenti
   b.caret
 ul.dropdown-menu
   li
-    a(href="/screens/inventory") Inventory
+    a(href="/screens/products") Products
   li
-    a(href="/screens/outbound") Outbound
+    a(href="/screens/reports") Reports
   li
     a(href="/screens/inbound") Inbound
   li
-    a(href="/screens/locations") Locations
-  li
-    a(href="/screens/products") Products
-  li
-    a(href="/screens/search") Search
+    a(href="/screens/outbound") Outbound
