--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -59,20 +59,16 @@ a.link-alias-white
 $product-main-color = #000000
 $product-text-color = white
 
-$inventory-main-color = #464646
-$inventory-text-color = white
+$reports-main-color = #323232
+$reports-text-color = white
 
-$inbound-main-color = #5a5a5a
+$inbound-main-color = #646464
 $inbound-text-color = white
 
-$outbound-main-color = #6b6b6b
+$outbound-main-color = #969696
 $outbound-text-color = white
 
-$locations-main-color = #7c7c7c
-$locations-text-color = white
 
-$search-main-color = #969696
-$search-text-color = white
 
 .panel-primary
   .product
@@ -105,43 +101,33 @@ $search-text-color = white
     a
       color $outbound-text-color
 
-  .search
-    background-color $search-main-color
-    border-color $search-main-color
+  .reports
+    background-color $reports-main-color
+    border-color $reports-main-color
     a
-      color $search-text-color
+      color $reports-text-color
 
 .product
   border-color $product-main-color
+.reports
+  border-color $reports-main-color
 .inbound
   border-color $inbound-main-color
 .outbound
   border-color $outbound-main-color
-.inventory
-  border-color $inventory-main-color
-.locations
-  border-color $locations-main-color
-.search
-  border-color $search-main-color
 
 .product-header
   background-color $product-main-color
   color $product-text-color
+.reports-header
+  background-color $reports-main-color
+  color $reports-text-color
 .inbound-header
   background-color $inbound-main-color
   color $inbound-text-color
 .outbound-header
   background-color $outbound-main-color
   color $outbound-text-color
-.inventory-header
-  background-color $inventory-main-color
-  color $inventory-text-color
-.locations-header
-  background-color $locations-main-color
-  color $locations-text-color
-.search-header
-  background-color $search-main-color
-  color $search-text-color
 
 .text-black
   color #000
