--- a/public/app/main/main.jade
+++ b/public/app/main/main.jade
@@ -1,7 +1,8 @@
 .container
   .jumbotron
-    h1 Inventory Management System
-    p Inventory Management System designed and built by David Cole
+    h1.text-center
+      em  IMS
+    h5.text-center Inventory Management System Designed and Built by David Cole
   .row
     .col-md-6
       div(ng-include="'/partials/main/main-products'")
