--- a/public/app/account/navbar-login.jade
+++ b/public/app/account/navbar-login.jade
@@ -4,7 +4,7 @@
       li
         a(href="/signup") Sign Up
     .form-group(ng-show="signInFormToggle")
-      input.form-control(placeholder="Email", ng-model="username")
+      input.form-control(placeholder="Username", ng-model="username")
     .form-group(ng-show="signInFormToggle")
        input.form-control(type="password", placeholder="Password", ng-model="password")
     button.btn.btn-primary(ng-click="signin(username, password)") Sign In
