--- a/public/app/admin/user/user-list.jade
+++ b/public/app/admin/user/user-list.jade
@@ -3,7 +3,11 @@
   table.table.table-hover.table-striped.table-condensed
     thead
       tr
-        th Full Name
+        th.click(ng-show="sortOrder != 'firstName' && sortOrder != '-firstName'", ng-click="sortOrder = 'firstName'") Full Name
+        th.click(ng-show="sortOrder == 'firstName' || sortOrder == '-firstName'", ng-click="reverseOrder(sortOrder)") Full Name
+          b.caret(ng-show="sortOrder == 'firstName'")
+          b.dropup(ng-show="sortOrder == '-firstName'")
+            b.caret
         th Username
         th Roles
     tbody
