--- a/public/app/admin/user/user-add.jade
+++ b/public/app/admin/user/user-add.jade
@@ -1,12 +1,12 @@
 .container
   .well
-    form.form-horizontal(name="signupForm")
+    form.form-horizontal(name="userForm")
       fieldset
         legend New User Information
         .form-group
-          label.col-md-2.control-label(for="email") Email
+          label.col-md-2.control-label(for="username") Username
           .col-md-10
-            input.form-control(name="email", type="email", placeholder="Email", ng-model="email", required)
+            input.form-control(name="username", type="username", placeholder="Username", ng-model="username", required)
         .form-group
           label.col-md-2.control-label(for="password") Password
           .col-md-10
@@ -22,6 +22,6 @@
         .form-group
           .col-md-10.col-md-offset-2
             .pull-right
-              button.btn.btn-primary(ng-click="signup()", ng-disabled="signupForm.$invalid") Submit
+              button.btn.btn-primary(ng-click="addUser()", ng-disabled="userForm.$invalid") Submit
               | &nbsp;
               a.btn.btn-default(href="/") Cancel
