--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -137,3 +137,12 @@ $outbound-text-color = white
   color #880000
 .click
   cursor pointer
+
+.table-header-bar
+  background-color #b9b9b9
+  th
+    min-width 120px
+    border 1px solid #ffffff
+
+.content-container
+  //background-color #828282
