--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -34,8 +34,11 @@ script(type="text/javascript", src="/app/admin/product/mvProductAdmin.js")
 script(type="text/javascript", src="/app/admin/product/mvProductAddCtrl.js")
 script(type="text/javascript", src="/app/admin/product/mvProductsListCtrl.js")
 script(type="text/javascript", src="/app/screens/inbound/mvInboundScreenCtrl.js")
+script(type="text/javascript", src="/app/screens/inbound/mvNewPurchaseOrderCtrl.js")
 script(type="text/javascript", src="/app/screens/inventory/mvInventoryScreenCtrl.js")
 script(type="text/javascript", src="/app/screens/locations/mvLocationsScreenCtrl.js")
+script(type="text/javascript", src="/app/screens/locations/mvLocation.js")
+script(type="text/javascript", src="/app/screens/locations/mvCachedLocation.js")
 script(type="text/javascript", src="/app/screens/outbound/mvOutboundScreenCtrl.js")
 script(type="text/javascript", src="/app/screens/products/mvProduct.js")
 script(type="text/javascript", src="/app/screens/products/mvCachedProduct.js")
