--- a/public/app/screens/screens.jade
+++ b/public/app/screens/screens.jade
@@ -5,7 +5,10 @@ ul.dropdown-menu
     a(href="/screens/products") Products
   li
     a(href="/screens/reports") Reports
-  li
-    a(href="/screens/inbound") Inbound
+  li(ng-mouseenter="toggleInbound()", ng-mouseleave="toggleInbound()")
+    a.dropdown-toggle(href="/screens/inbound") Inbound
+    ul.downdown-menu(ng-show="showInbound === true")
+      li
+        a(href="/screens/inbound/order") Purchase Order
   li
     a(href="/screens/outbound") Outbound
