populates database with many-to-many relationship between loc and products

--- a/public/app/main/main-products.jade
+++ b/public/app/main/main-products.jade
@@ -6,7 +6,9 @@
         .row
           .col-md-6.text-right Total Products:
           .col-md-6.text-left {{ inventory | number }}
-        .row --
+        .row
+          .col-md-6.text-right Product in location:
+          .col-md-6.text-left {{ example }}
         .row
           .col-md-6.text-right Low-Quantity Products:
           .col-md-6.text-left 0
