locations and products relationship set up on server and client

--- a/public/app/admin/product/product-details.jade
+++ b/public/app/admin/product/product-details.jade
@@ -1,3 +1,5 @@
 .container
   item-details
-  h4(ng-repeat="(key, val) in currentItem") {{ key }}: {{ val }}
+  h4(ng-repeat="(key, val) in currentItem")
+    p(ng-show="key !== 'locations'") {{ key }}: {{ val }}
+    p(ng-show="key == 'locations'") {{ key }}: {{ locations }}
