--- a/public/app/screens/inbound/new-purchase-order.jade
+++ b/public/app/screens/inbound/new-purchase-order.jade
@@ -1,3 +1,4 @@
 .container
   h1.text-center New Purchase Order
-  h2 {{ product.name }}
+  h2 Location: {{ location }}
+  h2 Has product: {{ product }}
