--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -68,7 +68,11 @@ $inbound-text-color = white
 $outbound-main-color = #969696
 $outbound-text-color = white
 
+$locations-main-color = #000000
+$locations-text-color = white
 
+$inventory-main-color = #000000
+$inventory-text-color = white
 
 .panel-primary
   .product
