--- a/public/app/screens/inbound/new-purchase-order.jade
+++ b/public/app/screens/inbound/new-purchase-order.jade
@@ -8,7 +8,7 @@
           .form-group
             label.col-md-5.control-label(for="name") Product:
             .col-md-7
-              label.carousel-control.text-black(ng-model="name") {{ name }}
+              label.control-label(ng-model="name") {{ name }}
           .form-group
             label.col-md-5.control-label(for="upc") UPC:
             .col-md-7
